--- a/libs/movie/src/lib/movie/marketplace/main/main.component.scss
+++ b/libs/movie/src/lib/movie/marketplace/main/main.component.scss
@@ -32,10 +32,7 @@ h5 {
   }
 }
 
-.card-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 16px;
+ul.grid {
   margin: 24px;
 }
 
