--- a/libs/campaign/src/lib/marketplace/investment/investment.component.html
+++ b/libs/campaign/src/lib/marketplace/investment/investment.component.html
@@ -16,11 +16,11 @@
 
   <section *ngIf="campaign.perks.length">
     <h3>Privileges</h3>
-    <article class="privileges">
+    <ul class="grid">
       <ng-container *ngFor="let perk of campaign.perks">
         <campaign-perk-card [perk]="perk"></campaign-perk-card>
       </ng-container>
-    </article>
+    </ul>
 
   </section>
 
