--- a/libs/movie/src/lib/movie/marketplace/shell/shell.component.scss
+++ b/libs/movie/src/lib/movie/marketplace/shell/shell.component.scss
@@ -7,10 +7,7 @@ nav {
 footer {
   margin: 24px 24px 72px 24px;
 
-  ul.files {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-gap: 16px;
+  ul.grid {
     margin: 24px;
 
     li {
