--- a/styles/style.scss
+++ b/styles/style.scss
@@ -43,6 +43,7 @@ ul.grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(var(--min-column), 1fr));
   grid-gap: 16px;
+  margin: 24px;
 }
 
 .ellipsis {
