--- a/libs/campaign/src/lib/marketplace/investment/investment.component.html
+++ b/libs/campaign/src/lib/marketplace/investment/investment.component.html
@@ -17,9 +17,9 @@
   <section *ngIf="campaign.perks.length">
     <h3>Privileges</h3>
     <ul class="grid">
-      <ng-container *ngFor="let perk of campaign.perks">
+      <li *ngFor="let perk of campaign.perks">
         <campaign-perk-card [perk]="perk"></campaign-perk-card>
-      </ng-container>
+      </li>
     </ul>
 
   </section>
