--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -73,8 +73,15 @@
         </section>
 
         <section class="surface">
-          <analytics-map class="insights-map" [data]="activeCountries$ | async" (selection)="selectedCountry = $event"
-            [topCount]="5" horizontal showLegend selectable>
+          <analytics-map
+            class="insights-map"
+            [data]="activeCountries$ | async"
+            (selection)="selectedCountry = $event"
+            [topCount]="5"
+            horizontal
+            showLegend
+            selectable
+          >
             <h3>
               <mat-icon svgIcon="buyer_insights"></mat-icon>
               <span>Buyers' Insights</span>
@@ -82,8 +89,14 @@
           </analytics-map>
 
           <h3>Most active buyers</h3>
-          <bf-table [source]="activeBuyers$ | async" [filterValue]="selectedCountry" (rowClick)="showBuyer($event)"
-            clickable useFilter pagination="5">
+          <bf-table
+            [source]="activeBuyers$ | async"
+            [filterValue]="selectedCountry"
+            (rowClick)="showBuyer($event)"
+            clickable
+            useFilter
+            pagination="5"
+          >
             <ng-template colRef="user" label="Name" let-item sort>
               <b>{{ item | displayName }}</b>
             </ng-template>
