--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
@@ -84,52 +84,45 @@
   </bf-table>
 </section>
 
-
-<section>
-  <header class="heading">
-    <h3>
-      <span>Last Screenings</span>
-      <mat-icon svgIcon="info"></mat-icon>
-    </h3>
-    <ng-container *ngIf="ongoingScreenings$ | async as events">
-      <a ongoing-event-button href="/c/o/dashboard/event/{{events[0].id}}/statistics">Ongoing
-        Screenings</a>
-    </ng-container>
+<header class="heading">
+  <h3>
+    <span>Last Screenings</span>
+    <mat-icon svgIcon="info"></mat-icon>
+  </h3>
+  <ng-container *ngIf="ongoingScreenings$ | async as events">
+    <a ongoing-event-button href="/c/o/dashboard/event/{{events[0].id}}/statistics">Ongoing
+      Screenings</a>
+  </ng-container>
+</header>
+<section class="surface">
+  <span>"O" meaning the user left the screening right away.</span>
+  <analytics-metric-card-list [cards]="aggregatedScreeningCards$ | async"></analytics-metric-card-list>
+  <header class="space-between">
+    <h5>Attendees</h5>
+    <button mat-button (click)="exportScreenerAnalytics()">Export to .CSV</button>
   </header>
-  <section class="surface">
-    <span>"O" meaning the user left the screening right away.</span>
-    <analytics-metric-card-list [cards]="aggregatedScreeningCards$ | async"></analytics-metric-card-list>
-    <header class="space-between">
-      <h5>Attendees</h5>
-      <button mat-button (click)="exportScreenerAnalytics()">Export to .CSV</button>
-    </header>
-    <bf-table class="screenings" [source]="events$ | async" clickable useFilter pagination="50">
-      <ng-template colRef="invitation" label="Name" let-invitation sort defaultSort>
-        <b *ngIf="invitation.toUser; else noUser">{{ invitation.toUser.firstName }} {{ invitation.toUser.lastName }}</b>
-        <ng-template #noUser>
-          <b>--</b>
-        </ng-template>
+  <bf-table class="screenings" [source]="invitations$ | async" clickable useFilter pagination="50">
+    <ng-template colRef label="Name" let-invitation="item" sort defaultSort>
+      <b *ngIf="invitation.toUser; else noUser">{{ invitation.toUser.firstName }} {{ invitation.toUser.lastName }}</b>
+      <ng-template #noUser>
+        <b>--</b>
       </ng-template>
-      <ng-template colRef="invitation.toUser.email" label="Email" let-email sort defaultSort>
-        <span>{{ email ?? '--' }}</span>
-      </ng-template>
-      <ng-template colRef="toUserOrg.denomination.public" label="Company Name" let-name sort defaultSort>
-        <span>{{ name ?? '--' }}</span>
-      </ng-template>
-      <ng-template colRef="toUserOrg.activity" label="Activity" let-activity sort defaultSort>
-        <span>{{ activity ?? '--' }}</span>
-      </ng-template>
-      <ng-template colRef="toUserOrg.addresses.main.country" label="Country" let-country sort defaultSort>
-        <span>{{ country ?? '--' }}</span>
-      </ng-template>
-      <ng-template colRef="watchTime" label="Watchtime" let-watchtime sort defaultSort>
-        <span>{{ watchtime || 0 }} S</span>
-      </ng-template>
-      <ng-template colRef label="Watching status" let-event="item" sort defaultSort>
-        <ng-container *ngIf="(event|eventTime) === 'onTime'">
-          <a mat-stroked-button routerLink="/c/o/dashboard/event/{{event.id}}/statistics"> Watching now</a>
-        </ng-container>
-      </ng-template>
-    </bf-table>
-  </section>
+    </ng-template>
+    <ng-template colRef="toUser.email" label="Email" let-email sort defaultSort>
+      <span>{{ email ?? '--' }}</span>
+    </ng-template>
+    <ng-template colRef="guestOrg.denomination.public" label="Company Name" let-name sort defaultSort>
+      <span>{{ name ?? '--' }}</span>
+    </ng-template>
+    <ng-template colRef="guestOrg.activity" label="Activity" let-activity sort defaultSort>
+      <span>{{ activity ?? '--' }}</span>
+    </ng-template>
+    <ng-template colRef="guestOrg.addresses.main.country" label="Country" let-country sort defaultSort>
+      <span>{{ country ?? '--' }}</span>
+    </ng-template>
+    <ng-template colRef="watchTime" label="Watchtime" let-watchtime sort defaultSort>
+      <span>{{ watchtime || 0 }} S</span>
+    </ng-template>
+  </bf-table>
 </section>
+
