--- a/apps/catalog/catalog/src/app/dashboard/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/title/list/list.component.html
@@ -52,7 +52,7 @@
         <bf-tag>{{ status | toLabel: 'storeStatus' }}</bf-tag>
       </ng-template>
       <ng-template colRef label="Actions" let-movie sticky>
-        <dashboard-movie-table-actions [movie]="movie" [app]="app"></dashboard-movie-table-actions>
+        <dashboard-movie-table-actions [movie]="movie"></dashboard-movie-table-actions>
       </ng-template>
     </bf-table>
   </ng-container>
@@ -63,5 +63,5 @@
 </ng-template>
 
 <ng-template #empty>
-  <dashboard-empty-movie appName="{{ app | appName }}"></dashboard-empty-movie>
+  <dashboard-empty-movie></dashboard-empty-movie>
 </ng-template>
