--- a/apps/financiers/financiers/src/app/dashboard/title/list/list.component.html
+++ b/apps/financiers/financiers/src/app/dashboard/title/list/list.component.html
@@ -42,5 +42,5 @@
 </ng-template>
 
 <ng-template #empty>
-  <dashboard-empty-movie appName="{{ app | appName }}"></dashboard-empty-movie>
+  <dashboard-empty-movie></dashboard-empty-movie>
 </ng-template>
