--- a/libs/ui/src/lib/dashboard/components/empty-movie/empty-movie.component.scss
+++ b/libs/ui/src/lib/dashboard/components/empty-movie/empty-movie.component.scss
@@ -1,15 +1,15 @@
 :host {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 h3 {
   margin-top: 24px;
 }
 
-.no-title-card {
+.surface {
   width: 330px;
-  height: 220px;
   img {
     width: 100px;
     align-self: center;
