--- a/libs/ui/src/lib/dashboard/components/empty-movie/empty-movie.component.html
+++ b/libs/ui/src/lib/dashboard/components/empty-movie/empty-movie.component.html
@@ -1,17 +1,15 @@
-<section fxLayout="column" fxLayoutAlign="center center">
-  <dashboard-no-title></dashboard-no-title>
-  <article fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center" fxLayoutGap="24px">
-    <mat-card class="no-title-card" fxLayout="column" fxLayoutalign="center center">
-      <img asset="add_title.svg" alt="Add title">
-      <a routerLink="lobby" mat-button color="primary">Add one Title</a>
-    </mat-card>
-    <mat-card class="no-title-card" fxLayout="column">
-      <img asset="add_files.svg" alt="Upload files">
-      <a routerLink="../import" mat-button color="primary">Import Titles in bulk</a>
-    </mat-card>
-  </article>
-  <h3>Or</h3>
-  <button (click)="openIntercom()" mat-flat-button color="primary">
-    Contact the {{ appName }} team
-  </button>
-</section>
+<dashboard-no-title></dashboard-no-title>
+<article fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center" fxLayoutGap="24px">
+  <div class="surface"fxLayoutalign="center center">
+    <img asset="add_title.svg" alt="Add title">
+    <a routerLink="lobby" mat-button color="primary">Add one Title</a>
+  </div>
+  <div class='surface' >
+    <img asset="add_files.svg" alt="Upload files">
+    <a routerLink="../import" mat-button color="primary">Import Titles in bulk</a>
+  </div>
+</article>
+<h3>Or</h3>
+<button (click)="openIntercom()" mat-flat-button color="primary">
+  Contact the {{ app | appName }} team
+</button>
