--- a/libs/ui/src/lib/dashboard/components/movie-list-header/movie-list-header.component.html
+++ b/libs/ui/src/lib/dashboard/components/movie-list-header/movie-list-header.component.html
@@ -1,12 +1,10 @@
-<header fxLayout="row" fxLayoutAlign="space-between center">
+<header>
   <h1>My Titles</h1>
-  <div fxLayoutGap="24px">
-    <a mat-stroked-button color="primary" routerLink="../import">
-      <mat-icon svgIcon="excel"></mat-icon>
-      <span>Import Titles</span>
-    </a>
-    <a mat-mini-fab color="primary" routerLink="lobby" matTooltip="Add Title">
-      <mat-icon svgIcon="add"></mat-icon>
-    </a>
-  </div>
+  <a test-id="import-titles" mat-stroked-button color="primary" routerLink="../import">
+    <mat-icon svgIcon="excel"></mat-icon>
+    <span>Import Titles</span>
+  </a>
+  <a mat-mini-fab color="primary" routerLink="lobby" matTooltip="Add Title">
+    <mat-icon svgIcon="add"></mat-icon>
+  </a>
 </header>
