--- a/libs/ui/src/lib/dashboard/components/movie-list-header/movie-list-header.component.html
+++ b/libs/ui/src/lib/dashboard/components/movie-list-header/movie-list-header.component.html
@@ -4,7 +4,7 @@
     <mat-icon svgIcon="excel"></mat-icon>
     <span>Import Titles</span>
   </a>
-  <a mat-mini-fab color="primary" routerLink="lobby" matTooltip="Add Title">
+  <a mat-mini-fab color="primary" routerLink="lobby" matTooltip="Add Title" test-id="add-movie">
     <mat-icon svgIcon="add"></mat-icon>
   </a>
 </header>
