maintenance mode in plugin + tests + some renaming/refacto

--- a/libs/ui/src/lib/maintenance/maintenance.component.html
+++ b/libs/ui/src/lib/maintenance/maintenance.component.html
@@ -1,12 +1,12 @@
 <ng-container *ngIf="isInMaintenance$ | async; else canRefresh">
-  <h1 class="mat-display-1">We are in maintenance</h1>
+  <h1 class="mat-display-1" test-id="maintenance-mode">We are in maintenance</h1>
   <h3>This should take about 20min</h3>
 </ng-container>
 
 <ng-template #canRefresh>
   <h1 class="mat-display-1">Maintenance is over</h1>
   <h3>Please refresh the page</h3>
-  <button mat-flat-button color="warn" (click)="refresh()">
+  <button mat-flat-button color="warn" (click)="refresh()" test-id="maintenance-refresh">
     <mat-icon svgIcon="refresh"></mat-icon>
     <span>Refresh</span>
   </button>
