--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
@@ -97,33 +97,36 @@
 <section class="surface">
   <p>"O" meaning the user left the screening right away.</p>
   <analytics-metric-card-list [cards]="aggregatedScreeningCards$ | async"></analytics-metric-card-list>
-  <header class="heading">
-    <h5>Attendees</h5>
-    <button mat-button (click)="exportScreenerAnalytics()">Export to .CSV</button>
-  </header>
-  <bf-table class="screenings" [source]="invitations$ | async" clickable useFilter pagination="50">
-    <ng-template colRef label="Name" let-invitation="item" sort defaultSort>
-      <b *ngIf="invitation| guest:'user' as user">{{ user.firstName }} {{ user.lastName }}</b>
-    </ng-template>
-    <ng-template colRef label="Email" let-invitation="item" sort defaultSort>
-      <span>{{ (invitation | guest: 'user').email }}</span>
-    </ng-template>
-    <ng-template colRef="guestOrg.denomination.public" label="Company Name" let-name sort defaultSort>
-      <span>{{ name ?? '--' }}</span>
-    </ng-template>
-    <ng-template colRef="guestOrg.activity" label="Activity" let-activity sort defaultSort [filter]="filters.orgActivity">
-      <span *ngIf="activity else noActivity">{{ activity | toLabel: 'orgActivity' }}</span>
-      <ng-template #noActivity>--</ng-template>
-    </ng-template>
-    <ng-template colRef="guestOrg.addresses.main.country" label="Country" let-country sort defaultSort [filter]="filters.territories">
-      <span *ngIf="country else noCountry">
-        {{ country | toLabel:'territories' }}
-      </span>
-      <ng-template #noCountry>--</ng-template>
-    </ng-template>
-    <ng-template colRef="watchTime" label="Watchtime" let-watchtime sort defaultSort>
-      <span>{{ watchtime || 0 }} S</span>
-    </ng-template>
-  </bf-table>
+  <ng-container *ngIf="invitations$ | async as invitations">
+    <header class="heading">
+      <h5>Attendees</h5>
+
+      <button mat-button [disabled]="!invitations.length" (click)="exportScreenerAnalytics()">Export to .CSV</button>
+    </header>
+    <bf-table class="screenings" [source]="invitations" clickable useFilter pagination="50">
+      <ng-template colRef label="Name" let-invitation="item" sort defaultSort>
+        <b *ngIf="invitation| guest:'user' as user">{{ user.firstName }} {{ user.lastName }}</b>
+      </ng-template>
+      <ng-template colRef label="Email" let-invitation="item" sort defaultSort>
+        <span>{{ (invitation | guest: 'user').email }}</span>
+      </ng-template>
+      <ng-template colRef="guestOrg.denomination.public" label="Company Name" let-name sort defaultSort>
+        <span>{{ name ?? '--' }}</span>
+      </ng-template>
+      <ng-template colRef="guestOrg.activity" label="Activity" let-activity sort defaultSort [filter]="filters.orgActivity">
+        <span *ngIf="activity else noActivity">{{ activity | toLabel: 'orgActivity' }}</span>
+        <ng-template #noActivity>--</ng-template>
+      </ng-template>
+      <ng-template colRef="guestOrg.addresses.main.country" label="Country" let-country sort defaultSort [filter]="filters.territories">
+        <span *ngIf="country else noCountry">
+          {{ country | toLabel:'territories' }}
+        </span>
+        <ng-template #noCountry>--</ng-template>
+      </ng-template>
+      <ng-template colRef="watchTime" label="Watchtime" let-watchtime sort defaultSort>
+        <span>{{ watchtime || 0 }} S</span>
+      </ng-template>
+    </bf-table>
+  </ng-container>
 </section>
 
