--- a/apps/crm/crm/src/app/crm/pages/user/user.component.html
+++ b/apps/crm/crm/src/app/crm/pages/user/user.component.html
@@ -145,7 +145,7 @@
   <ng-template colRef="type" label="Type" let-type sort>
     {{type}}
   </ng-template>
-  <ng-template colRef="fromOrg.denomination.full" label="From Organization" let-full sort>
+  <ng-template colRef="fromOrg.denomination.full" label="From Organization" let-full sort [filter]="filters.invitationOrgName">
     {{full}}
   </ng-template>
   <ng-template colRef="toOrg.denomination.full" label="To Organization" let-full sort>
