--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
@@ -104,7 +104,7 @@
       <button mat-button [disabled]="!invitations.length" (click)="exportScreenerAnalytics()">Export to .CSV</button>
     </header>
     <bf-table class="screenings" [source]="invitations" clickable useFilter pagination="50">
-      <ng-template colRef label="Name" let-invitation="item" sort defaultSort>
+      <ng-template colRef label="Name" let-invitation="item" sort defaultSort [filter]="filters.name">
         <b *ngIf="invitation| guest:'user' as user">{{ user | displayName }}</b>
       </ng-template>
       <ng-template colRef label="Email" let-invitation="item" sort defaultSort [filter]="filters.email">
