--- a/apps/crm/crm/src/app/crm/pages/user/user.component.html
+++ b/apps/crm/crm/src/app/crm/pages/user/user.component.html
@@ -145,11 +145,11 @@
   <ng-template colRef="type" label="Type" let-type sort>
     {{type}}
   </ng-template>
-  <ng-template colRef="fromOrg.denomination.full" label="From Organization" let-full sort>
-    {{full}}
+  <ng-template colRef="fromOrg.name" label="From Organization" let-fromName sort>
+    {{fromName}}
   </ng-template>
-  <ng-template colRef="toOrg.denomination.full" label="To Organization" let-full sort>
-    {{full}}
+  <ng-template colRef="toOrg.name" label="To Organization" let-toName sort>
+    {{toName}}
   </ng-template>
   <ng-template colRef="status" label="Status" let-status sort>
     {{status}}
