--- a/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.html
@@ -7,7 +7,7 @@
   <ng-template colRef="user.email" label="Email" let-email sort>
     {{ email }}
   </ng-template>
-  <ng-template colRef="org.denomination.public" label="Company name" let-name sort>
+  <ng-template colRef="org.name" label="Company name" let-name sort>
     {{ name }}
   </ng-template>
   <ng-template colRef="org.activity" label="Activity" let-activity sort>
