--- a/apps/crm/crm/src/app/crm/pages/organizations/organizations.component.html
+++ b/apps/crm/crm/src/app/crm/pages/organizations/organizations.component.html
@@ -24,8 +24,8 @@
     <ng-template colRef="status" let-status sort>
       <bf-tag>{{ status }}</bf-tag>
     </ng-template>
-    <ng-template colRef="denomination.full" label="Organization Name" sort let-fullName>
-      {{ fullName }}
+    <ng-template colRef="name" label="Organization Name" sort let-name>
+      {{ name }}
     </ng-template>
     <ng-template colRef="addresses.main.country" defaultSort label="Country" sort let-country>
       {{ country ?? '--' | titlecase }}
