--- a/libs/import/src/lib/table-extracted-elements/organizations/organizations.component.html
+++ b/libs/import/src/lib/table-extracted-elements/organizations/organizations.component.html
@@ -45,9 +45,9 @@
     <td mat-cell *matCellDef="let element"> {{ element.org.id ? element.org.id : '--'  }} </td>
   </ng-container>
 
-  <ng-container matColumnDef="org.denomination.full">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Org full denomination </th>
-    <td mat-cell *matCellDef="let element"> {{ element.org.denomination.full ? element.org.denomination.full : '--'  }} </td>
+  <ng-container matColumnDef="org.name">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Org Name </th>
+    <td mat-cell *matCellDef="let element"> {{ element.org.name ? element.org.name : '--'  }} </td>
   </ng-container>
 
   <ng-container matColumnDef="org.email">
