--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.scss
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.scss
@@ -26,7 +26,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    .last_screenings {
+    h3 {
       display: flex;
       align-items: center;
       margin-bottom: 0;
@@ -41,7 +41,6 @@ section {
 .film-page-button {
   height: fit-content;
 }
-
 
 bf-table.screenings {
   margin-top: 24px;
