--- a/libs/analytics/src/lib/components/pie-chart/pie-chart.component.html
+++ b/libs/analytics/src/lib/components/pie-chart/pie-chart.component.html
@@ -1,11 +1,5 @@
 <header>
-  <article>
-    <h5>
-      <mat-icon svgIcon="business"></mat-icon>
-      <span>Split by Company Activity</span>
-    </h5>
-    <p class="mat-caption">Learn who are the users who were interested in this Title.</p>
-  </article>
+  <ng-content></ng-content>
 
   <button mat-icon-button (click)="toggleSelect()" *ngIf="previousSelection" matTooltip="Remove selection">
     <mat-icon svgIcon="refresh_filters"></mat-icon>
