--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.scss
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.scss
@@ -42,10 +42,31 @@ section {
     flex-wrap: wrap;
     margin-bottom: 8px;
   }
+
+  .graphs {
+    display: flex;
+    gap: 24px;
+
+    analytics-bar-chart {
+      flex: 2;
+    }
+
+    analytics-pie-chart {
+      flex: 1;
+
+      h5 {
+        display: flex;
+      }
+    }
+  }
 }
 
 @include layout-bp(xs) {
   img {
     display: none;
+  }
+
+  .graphs {
+    flex-direction: column;
   }
 }
