--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
@@ -34,7 +34,15 @@
     </a>
 
     <div fxLayout fxLayout.lt-sm="column" fxLayoutGap="16px">
-      <analytics-pie-chart fxFlex class="surface" [data]="orgActivity$ | async" (selection)="filterValue = $event"></analytics-pie-chart>
+      <analytics-pie-chart fxFlex class="surface" [data]="orgActivity$ | async" (selection)="filterValue = $event">
+        <article>
+          <h5>
+            <mat-icon svgIcon="business"></mat-icon>
+            <span>Split by Company Activity</span>
+          </h5>
+          <p class="mat-caption">Learn who are the users who were interested in this Title.</p>
+        </article>
+      </analytics-pie-chart>
       <analytics-map fxFlex class="surface" [data]="territoryActivity$ | async" selectable (selection)="filterValue = $event">
         <article>
           <h5>
