--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -63,10 +63,8 @@
   <article class="surface graphs">
     <analytics-bar-chart [data]="totalAnalyticsPerTitle$ | async"></analytics-bar-chart>
     <analytics-pie-chart class="surface" [data]="aggregatedPerGenre$ | async">
-      <h5>
-        <mat-icon svgIcon="theater_comedy"></mat-icon>
-        <span>Genres Tendancy</span>
-      </h5>
+      <mat-icon title svgIcon="theater_comedy"></mat-icon>
+      <h5 title>Genres Tendancy</h5>
     </analytics-pie-chart>
   </article>
 
