--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.scss
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.scss
@@ -48,14 +48,14 @@ section {
     gap: 24px;
 
     analytics-bar-chart {
-      flex: 2;
+      flex-grow: 2;
     }
 
     analytics-pie-chart {
-      flex: 1;
+      flex-grow: 1;
 
       h5 {
-        display: flex;
+        margin-bottom: 0;
       }
     }
   }
