--- a/apps/festival/festival/src/app/dashboard/home/home.component.scss
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.scss
@@ -21,7 +21,7 @@ header {
     margin-top: 24px;
 
     h5 {
-      display: flex;
+      margin-bottom: 0;
     }
   }
 }
@@ -59,6 +59,10 @@ analytics-map h3 {
 
 .margin-bottom {
   margin-bottom: 24px;
+
+  h3 {
+    margin-bottom: 0;
+  }
 }
 
 .link_buttons {
