--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.html
@@ -120,7 +120,7 @@
         <ng-template colRef label="Email" let-invitation="item" sort defaultSort [filter]="filters.email">
           <span>{{ (invitation | guest: 'user').email }}</span>
         </ng-template>
-        <ng-template colRef="guestOrg.denomination.public" label="Company Name" let-name sort defaultSort>
+        <ng-template colRef="guestOrg.name" label="Company Name" let-name sort defaultSort>
           <span>{{ name ?? '-' }}</span>
         </ng-template>
         <ng-template colRef="guestOrg.activity" label="Activity" let-activity sort defaultSort [filter]="filters.orgActivity">
