change to column layout on lt-lg

--- a/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.scss
+++ b/apps/festival/festival/src/app/dashboard/analytics/title/title-analytics.component.scss
@@ -51,9 +51,8 @@ bf-table.screenings {
 .vanity_metrics{
   display: flex;
   gap: 16px;
-  overflow-x: auto;
   analytics-line-chart{
-    flex: 1 1;
+    flex-grow: 1;
     h5{
       display: flex;
     }
@@ -61,7 +60,7 @@ bf-table.screenings {
 }
 
 
-@include layout-bp(lt-md) {
+@include layout-bp(lt-lg) {
   .vanity_metrics{
     flex-direction: column;
   }
