--- a/apps/festival/festival/src/app/dashboard/home/home.component.scss
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.scss
@@ -70,3 +70,12 @@ analytics-map h3{
 .insights-map{
   margin-bottom: 24px;
 }
+
+.insights-wrapper{
+  flex-direction: column;
+  display: flex;
+  button{
+    align-self: center;
+    margin-top: 16px;
+  }
+}
