--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -66,7 +66,7 @@
             </bf-carousel>
           </ng-container>
 
-          <a mat-button class="see_titles" routerLink="title">
+          <a mat-button class="link_buttons" routerLink="title">
             <span>View all Titles Activity</span>
             <mat-icon svgIcon="arrow_forward"></mat-icon>
           </a>
@@ -127,7 +127,7 @@
             </ng-template>
           </bf-table>
 
-          <button mat-button class="see_titles" routerLink="/c/o/dashboard/home/buyer">View All Buyers' Activity</button>
+          <a mat-button class="link_buttons" routerLink="/c/o/dashboard/home/buyer">View All Buyers' Activity</a>
         </section>
       </ng-container>
     </ng-container>
