shortened url link

--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -127,7 +127,7 @@
             </ng-template>
           </bf-table>
 
-          <a mat-button class="link_buttons" routerLink="/c/o/dashboard/home/buyer">View All Buyers' Activity</a>
+          <a mat-button class="link_buttons" routerLink="buyer">View All Buyers' Activity</a>
         </section>
       </ng-container>
     </ng-container>
