--- a/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyers/buyers-analytics.component.html
@@ -1,5 +1,9 @@
 <h1>Buyers' Activity</h1>
 
+<section class="surface">
+  <analytics-pie-chart class="surface" [data]="orgActivity$ | async"></analytics-pie-chart>
+</section>
+
 <bf-table [source]="buyersAnalytics$ | async" pagination="5" useFilter clickable (rowClick)="goToBuyer($event)">
   <ng-template colRef="user" label="Name" let-user sort>
     <b>{{ user | displayName }}</b>
